# disk-llm

./: .gitignore  CONTRIBUTING.md  LICENSE  MANIFEST.in  PHASE1_REPORT.md  README.md  STATUS_AND_NEXT_STEPS.md  modalrun.md  nextstep.md  pyproject.toml
.github/workflows/: modal-benchmark.yml
docs/: architecture.md  converter.html  documentation.html  github-actions-modal-review.md  index.html  modal_remote_run.md  telemetry.html
modal-results/: benchmark_insights.md  benchmark_metadata.json  benchmark_runs.csv  benchmark_summary.csv  comparison_summary.md  memory_timeline.csv  modal_run_report.json  packed_inspection.json  source_inspection.json
modal-results-postfix/qwen35-9b-modal-cpu-postfix/: benchmark_metadata.json
modal-results-postfix/qwen35-9b-postfix-v3/: benchmark_insights.md  benchmark_metadata.json  benchmark_runs.csv  benchmark_summary.csv  modal_run_report.json  packed_inspection.json
modal-results-postfix/qwen35-9b-postfix-v4/: benchmark_insights.md  benchmark_metadata.json  benchmark_runs.csv  benchmark_summary.csv  modal_run_report.json  packed_inspection.json  source_inspection.json
scripts/: benchmark.py  export_public_benchmark_plots.py  modal_qwen_benchmark.py  plot_results.py  run_modal_qwen35_9b.ps1  run_modal_qwen35_9b.sh
site/: index.html  styles.css
src/disk_llm/: __init__.py  benchmarking.py  cli.py  converter.py  (+9 more)
tests/: __init__.py  helpers.py  test_benchmarking.py  test_cli.py  test_converter.py  test_plotting.py  test_qwen_runtime_regressions.py  test_runtime_kernels.py  test_runtime_toy_model.py  test_safetensors_io.py
(+17 files in other folders)
